--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,12 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>threat-composer</title>
+
+  <style>
+    iframe#webpack-dev-server-client-overlay{
+      display: none;
+    }
+  </style>
 </head>
 
 <body>
